<resources>
    <string name="app_name">FaceCar2.0</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_password">SETTINGS\nEnter your Password</string>
    <string name="scanning">Scanning</string>
    <string name="change_pin">Change Pin</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="change">Change</string>
    <string name="create_as_a_member">Create as a Member</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create">Create</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_as_an_owner">Create as an Owner</string>
    <string name="create_as_an_member">Create as a member</string>
    <string name="enter_pin_to_continue">Enter PIN to Continue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="request">Request</string>
    <string name="vehicle_registration_no">Vehicle Registration No</string>
    <string name="guest_login">Guest Login</string>
    <string name="unlock">Unlock</string>
    <string name="add_face">Add Face</string>
    <string name="delete_face">DElete Face</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="welcome">Welcome</string>
    <string name="facecar">FaceCar</string>
    <string name="to">to</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
</resources>