<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".CreateAsOwner">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:context=".CreateAsOwner">

        <TextView
            android:id="@+id/textView6"
            android:padding="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_as_an_owner"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtFullNameCreOwner"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/txtUsernameCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmailCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/txtPasswordCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtConfirmPwCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtVehicleNoCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLength="6"
            android:textAllCaps="true"
            android:hint="@string/vehicle_registration_no"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/txtPhoneNoCreOwner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"/>





        <Button
            android:id="@+id/btnOwnerCreate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/create" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"/>

        <Button
            android:id="@+id/btnBackOwnerCreate"
            android:onClick="back"
            android:layout_width="match_parent"
            android:background="@drawable/cmn_btn_background"
            android:layout_height="40dp"
            android:text="@string/back" />



    </LinearLayout>
    <ProgressBar
        android:id="@+id/loadingCreatingOwner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</RelativeLayout>