<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".CreateAsMember">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateAsOwner"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/create_as_a_member"
            android:textSize="30sp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >

           <EditText
               android:id="@+id/txtFullNameCreMember"
               android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/full_name"
               android:inputType="textPersonName" />
           <EditText
               android:id="@+id/txtUsernameCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/username"
               android:inputType="textPersonName" />

           <EditText
               android:id="@+id/txtEmailCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/email"
               android:inputType="textEmailAddress" />

           <EditText
               android:id="@+id/txtPasswordCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/password"
               android:inputType="textPassword" />

           <EditText
               android:id="@+id/txtConfirmPwCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/confirm_password"
               android:inputType="textPassword" />

           <EditText
               android:id="@+id/txtVehicleNoCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/vehicle_registration_no"
               android:inputType="textPersonName"
               android:maxLength="6"/>

           <EditText
               android:id="@+id/txtPhoneNoCreMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:hint="@string/phone_number"
               android:inputType="phone"
               android:maxLength="10" />

           <Button
               android:id="@+id/btnCreateMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:background="@drawable/cmn_btn_background"
               android:text="@string/create" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="4dp"/>

           <Button
               android:id="@+id/btnBackOwnerMember"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:background="@drawable/cmn_btn_background"
               android:onClick="back"
               android:text="@string/back" />

       </LinearLayout>


    </LinearLayout>
    <ProgressBar
        android:id="@+id/loadingCreatingMember"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>