<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".ChangePin">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/change_pin"
                android:paddingBottom="20dp"
                android:textSize="24sp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/txtChangePIN_oldPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:maxLength="4"
            android:hint="@string/old_pin"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/txtChangePin_newpin"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_pin"
            android:inputType="numberPassword"
            android:maxLength="4" />

        <EditText
            android:id="@+id/txtChangePin_confirmpin"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_pin"
            android:inputType="numberPassword"
            android:maxLength="4" />

        <Button
            android:id="@+id/btnChangePin_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/change" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"/>

        <Button
            android:id="@+id/btnChangePin_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>