<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".ForgotPassword">

    <ProgressBar
        android:id="@+id/progressBarForgotPw"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:padding="40dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/txtFPEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtFPReg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/vehicle_registration_no"
            android:inputType="textPersonName"
            android:maxLength="6" />

        <Button
            android:id="@+id/btnFPRequest"
            android:onClick="forgotPWreq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/request"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:id="@+id/btnFPback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="backFP"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/back" />








    </LinearLayout>


</RelativeLayout>