<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthPassword"
    android:background="@drawable/background_pic">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="40dp">

        <ProgressBar
            android:id="@+id/progressBarAuth"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_your_password"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:gravity="center_horizontal" />

        </RelativeLayout>

        <EditText
            android:id="@+id/txtAuthPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            />
        <Button
            android:id="@+id/btnAuthPass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"/>
        <Button
            android:id="@+id/btnAuthPass_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/cancel"/>

    </LinearLayout>

</RelativeLayout>