<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".ChangeDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:context=".CreateAsOwner">

        <TextView
            android:id="@+id/txtChangeDetails"
            android:padding="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change details for\n"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtFullNameChangeDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/txtEmailChangeDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />



        <EditText
            android:id="@+id/txtPhoneNoChangeDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"/>





        <Button
            android:id="@+id/btnChangeDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/cmn_btn_background"
            android:text="Change" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"/>

        <Button
            android:id="@+id/btnBackChangeDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/cmn_btn_background"
            android:text="@string/back" />



    </LinearLayout>
    <ProgressBar
        android:id="@+id/loadingCreatingOwner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</RelativeLayout>