<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".EnterPin">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/enter_pin_to_continue"
                    android:textSize="24sp"
                    android:paddingBottom="20dp"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/txtEnterPIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="4"
                android:hint="PIN"
                android:inputType="numberPassword" />

            <Button
                android:id="@+id/btnEnterPinOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cmn_btn_background"
                android:text="@string/ok" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="4dp"/>

            <Button
                android:id="@+id/btnEnterPinCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cmn_btn_background"
                android:text="@string/cancel" />
        </LinearLayout>



    </RelativeLayout>



</RelativeLayout>